Adding a package and moving the SceneReference-related members to it

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.alephvault.unity.layout": "file:C:/Users/yucho/Documents/Unity Projects/unity-layout",
     "com.alephvault.unity.menuactions": "file:C:/Users/yucho/Documents/Unity Projects/unity-menu-actions",
+    "com.alephvault.unity.scenes": "file:C:/Users/yucho/Documents/Unity Projects/unity-scenes",
     "com.alephvault.unity.support": "file:C:/Users/yucho/Documents/Unity Projects/unity-support",
     "com.alephvault.unity.support.generic": "file:C:/Users/yucho/Documents/Unity Projects/unity-support-generic",
     "com.unity.ads": "2.0.8",
