--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "com.alephvault.unity.layout": "file:C:/Users/yucho/Documents/Unity Projects/unity-layout",
-    "com.alephvault.unity.menuactions": "file:C:/Users/yucho/Documents/Unity Projects/unity-menu-actions",
-    "com.alephvault.unity.scenes": "file:C:/Users/yucho/Documents/Unity Projects/unity-scenes",
-    "com.alephvault.unity.support": "file:C:/Users/yucho/Documents/Unity Projects/unity-support",
-    "com.alephvault.unity.support.generic": "file:C:/Users/yucho/Documents/Unity Projects/unity-support-generic",
+    "com.alephvault.unity.layout": "file:C:/Users/luism/Projects/unity-layout",
+    "com.alephvault.unity.menuactions": "file:C:/Users/luism/Projects/unity-menu-actions",
+    "com.alephvault.unity.scenes": "file:C:/Users/luism/Projects/unity-scenes",
+    "com.alephvault.unity.support": "file:C:/Users/luism/Projects/unity-support",
+    "com.alephvault.unity.support.generic": "file:C:/Users/luism/Projects/unity-support-generic",
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.2.3",
     "com.unity.collab-proxy": "1.2.15",
-    "com.unity.package-manager-ui": "2.0.8",
-    "com.unity.purchasing": "2.0.3",
+    "com.unity.package-manager-ui": "2.0.13",
+    "com.unity.purchasing": "2.2.1",
     "com.unity.textmeshpro": "1.4.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
