Removing SoundAround and replacing with package import

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.alephvault.unity.layout": "file:C:/Users/luism/Projects/unity-layout",
     "com.alephvault.unity.menuactions": "file:C:/Users/luism/Projects/unity-menu-actions",
     "com.alephvault.unity.scenes": "file:C:/Users/luism/Projects/unity-scenes",
+    "com.alephvault.unity.soundaround": "file:C:/Users/luism/Projects/unity-soundaround",
     "com.alephvault.unity.support": "file:C:/Users/luism/Projects/unity-support",
     "com.alephvault.unity.support.generic": "file:C:/Users/luism/Projects/unity-support-generic",
     "com.unity.ads": "2.0.8",
