Moving GabTab to its own package.

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.alephvault.unity.soundaround": "file:C:/Users/luism/Projects/unity-soundaround",
     "com.alephvault.unity.support": "file:C:/Users/luism/Projects/unity-support",
     "com.alephvault.unity.support.generic": "file:C:/Users/luism/Projects/unity-support-generic",
+    "com.gamemeanmachine.unity.gabtab": "file:C:/Users/luism/Projects/unity-gabtab",
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.2.3",
     "com.unity.collab-proxy": "1.2.15",
