Moving WindRose/GabTab and WindRose/BackPack into their own packages

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,8 @@
     "com.gamemeanmachine.unity.backpack": "file:C:/Users/luism/Projects/unity-backpack",
     "com.gamemeanmachine.unity.gabtab": "file:C:/Users/luism/Projects/unity-gabtab",
     "com.gamemeanmachine.unity.windrose": "file:C:/Users/luism/Projects/unity-windrose",
+    "com.gamemeanmachine.unity.windrose-backpack": "file:C:/Users/luism/Projects/unity-windrose-backpack-plugin",
+    "com.gamemeanmachine.unity.windrose-gabtab": "file:C:/Users/luism/Projects/unity-windrose-gabtab-plugin",
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.2.3",
     "com.unity.collab-proxy": "1.2.15",
