--- a/Assets/com.alephvault.unity.binary/Runtime/AlephVault.Unity.Buffering.Runtime.asmdef
+++ b/Assets/com.alephvault.unity.binary/Runtime/AlephVault.Unity.Buffering.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "AlephVault.Unity.Buffering.Runtime",
+    "name": "AlephVault.Unity.Binary.Runtime",
     "rootNamespace": "",
     "references": [
         "GUID:9fb1e86edc1bf4f46bfc867526bca155"
