Adding dependency from meetgard to layout package as well, and sorting protocols by dependencies (RequireComponent), always keeping the Zero protocol first

--- a/Assets/com.alephvault.unity.meetgard/Runtime/AlephVault.Unity.Meetgard.asmdef
+++ b/Assets/com.alephvault.unity.meetgard/Runtime/AlephVault.Unity.Meetgard.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "AlephVault.Unity.Binary.Runtime",
-        "AlephVault.Unity.Support.Runtime"
+        "AlephVault.Unity.Support.Runtime",
+        "AlephVault.Unity.Layout.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
