--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.alephvault.unity.binary": "file:C:/Users/luism/Projects/unity-binary",
     "com.alephvault.unity.camjam": "file:C:/Users/luism/Projects/unity-camjam",
     "com.alephvault.unity.layout": "file:C:/Users/luism/Projects/unity-layout",
+    "com.alephvault.unity.meetgard": "file:C:/Users/luism/Projects/unity-meetgard",
     "com.alephvault.unity.menuactions": "file:C:/Users/luism/Projects/unity-menu-actions",
     "com.alephvault.unity.scenes": "file:C:/Users/luism/Projects/unity-scenes",
     "com.alephvault.unity.soundaround": "file:C:/Users/luism/Projects/unity-soundaround",
@@ -21,7 +22,6 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.multiplayer-hlapi": "1.0.8",
     "com.unity.multiplayer.mlapi": "file:C:/Users/luism/Projects/com.unity.multiplayer.mlapi/com.unity.multiplayer.mlapi",
     "com.unity.purchasing": "3.2.1",
     "com.unity.test-framework": "1.1.24",
