--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,19 @@
 {
   "dependencies": {
-    "com.alephvault.unity.binary": "file:C:/Users/luism/Projects/unity-binary",
-    "com.alephvault.unity.camjam": "file:C:/Users/luism/Projects/unity-camjam",
-    "com.alephvault.unity.layout": "file:C:/Users/luism/Projects/unity-layout",
-    "com.alephvault.unity.meetgard": "file:C:/Users/luism/Projects/unity-meetgard",
-    "com.alephvault.unity.menuactions": "file:C:/Users/luism/Projects/unity-menu-actions",
-    "com.alephvault.unity.scenes": "file:C:/Users/luism/Projects/unity-scenes",
-    "com.alephvault.unity.soundaround": "file:C:/Users/luism/Projects/unity-soundaround",
-    "com.alephvault.unity.support": "file:C:/Users/luism/Projects/unity-support",
-    "com.alephvault.unity.support.generic": "file:C:/Users/luism/Projects/unity-support-generic",
-    "com.gamemeanmachine.unity.backpack": "file:C:/Users/luism/Projects/unity-backpack",
-    "com.gamemeanmachine.unity.gabtab": "file:C:/Users/luism/Projects/unity-gabtab",
-    "com.gamemeanmachine.unity.windrose": "file:C:/Users/luism/Projects/unity-windrose",
-    "com.gamemeanmachine.unity.windrose-backpack": "file:C:/Users/luism/Projects/unity-windrose-backpack-plugin",
-    "com.gamemeanmachine.unity.windrose-gabtab": "file:C:/Users/luism/Projects/unity-windrose-gabtab-plugin",
+    "com.alephvault.unity.binary": "file:../../unity-binary",
+    "com.alephvault.unity.camjam": "file:../../unity-camjam",
+    "com.alephvault.unity.layout": "file:../../unity-layout",
+    "com.alephvault.unity.meetgard": "file:../../unity-meetgard",
+    "com.alephvault.unity.menuactions": "file:../../unity-menu-actions",
+    "com.alephvault.unity.scenes": "file:../../unity-scenes",
+    "com.alephvault.unity.soundaround": "file:../../unity-soundaround",
+    "com.alephvault.unity.support": "file:../../unity-support",
+    "com.alephvault.unity.support.generic": "file:../../unity-support-generic",
+    "com.gamemeanmachine.unity.backpack": "file:../../unity-backpack",
+    "com.gamemeanmachine.unity.gabtab": "file:../../unity-gabtab",
+    "com.gamemeanmachine.unity.windrose": "file:../../unity-windrose",
+    "com.gamemeanmachine.unity.windrose-backpack": "file:../../unity-windrose-backpack-plugin",
+    "com.gamemeanmachine.unity.windrose-gabtab": "file:../../unity-windrose-gabtab-plugin",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.7.1",
