--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -22,7 +22,7 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.multiplayer.mlapi": "file:C:/Users/luism/Projects/com.unity.multiplayer.mlapi/com.unity.multiplayer.mlapi",
+    "com.unity.multiplayer.mlapi": "file:../../com.unity.multiplayer.mlapi/com.unity.multiplayer.mlapi",
     "com.unity.purchasing": "3.2.1",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
