--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.alephvault.unity.camjam": "file:../../unity-camjam",
     "com.alephvault.unity.layout": "file:../../unity-layout",
     "com.alephvault.unity.meetgard": "file:../../unity-meetgard",
+    "com.alephvault.unity.meetgard.auth": "file:../../unity-meetgard-auth",
     "com.alephvault.unity.menuactions": "file:../../unity-menu-actions",
     "com.alephvault.unity.scenes": "file:../../unity-scenes",
     "com.alephvault.unity.soundaround": "file:../../unity-soundaround",
@@ -22,11 +23,11 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.multiplayer.mlapi": "file:../../com.unity.multiplayer.mlapi/com.unity.multiplayer.mlapi",
     "com.unity.purchasing": "3.2.1",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
+    "com.unity.toolchain.linux-x86_64": "0.1.19-preview",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.21-preview",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.1.7",
