--- a/Assets/com.gamemeanmachine.unity.windrose.biomes/Runtime/GameMeanMachine.Unity.WindRose.Biomes.Runtime.asmdef
+++ b/Assets/com.gamemeanmachine.unity.windrose.biomes/Runtime/GameMeanMachine.Unity.WindRose.Biomes.Runtime.asmdef
@@ -2,6 +2,7 @@
     "name": "GameMeanMachine.Unity.WindRose.Biomes.Runtime",
     "rootNamespace": "",
     "references": [
+        "GUID:9fb1e86edc1bf4f46bfc867526bca155",
         "GUID:439919d2a7071004695af55cbbe6745b"
     ],
     "includePlatforms": [],
