--- a/Assets/com.gamemeanmachine.unity.windrose.neighbourteleports/Runtime/GameMeanMachine.Unity.WindRose.NeighbourTeleports.Runtime.asmdef
+++ b/Assets/com.gamemeanmachine.unity.windrose.neighbourteleports/Runtime/GameMeanMachine.Unity.WindRose.NeighbourTeleports.Runtime.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "",
     "references": [
         "GUID:439919d2a7071004695af55cbbe6745b",
-        "GUID:9fb1e86edc1bf4f46bfc867526bca155"
+        "GUID:9fb1e86edc1bf4f46bfc867526bca155",
+        "GUID:cccffde430f2245d5a04195a4583a9bf",
+        "GUID:8233aa084c7334eb18c3e9713fa443e5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
