--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -18,6 +18,7 @@
     "com.gamemeanmachine.unity.windrose-backpack": "file:../../unity-windrose-backpack-plugin",
     "com.gamemeanmachine.unity.windrose-gabtab": "file:../../unity-windrose-gabtab-plugin",
     "com.gamemeanmachine.unity.windrose.biomes": "file:../../unity-windrose-biomes",
+    "com.gamemeanmachine.unity.windrose.cubeworlds": "file:../../unity-windrose-cubeworlds",
     "com.gamemeanmachine.unity.windrose.neighbourteleports": "file:../../unity-windrose-neighbourteleports",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
