--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.alephvault.unity.binary": "file:../../unity-binary",
     "com.alephvault.unity.camjam": "file:../../unity-camjam",
+    "com.alephvault.unity.ipfs": "file:/home/luismasuelli/Projects/Unity/unity-ipfs",
     "com.alephvault.unity.layout": "file:../../unity-layout",
     "com.alephvault.unity.meetgard": "file:../../unity-meetgard",
     "com.alephvault.unity.meetgard.auth": "file:../../unity-meetgard-auth",
