--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.alephvault.unity.spriteutils": "file:/home/luismasuelli/Projects/Unity/unity-spriteutils",
     "com.alephvault.unity.support": "file:../../unity-support",
     "com.alephvault.unity.support.generic": "file:../../unity-support-generic",
+    "com.alephvault.unity.textureutils": "file:/home/luismasuelli/Projects/Unity/unity-textureutils",
     "com.gamemeanmachine.unity.backpack": "file:../../unity-backpack",
     "com.gamemeanmachine.unity.gabtab": "file:../../unity-gabtab",
     "com.gamemeanmachine.unity.netrose": "file:../../unity-netrose",
