--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.alephvault.unity.meetgard.auth": "file:../../unity-meetgard-auth",
     "com.alephvault.unity.meetgard.scopes": "file:../../unity-meetgard-scopes",
     "com.alephvault.unity.menuactions": "file:../../unity-menu-actions",
+    "com.alephvault.unity.remotestorage": "file:/home/luismasuelli/Projects/Unity/unity-remotestorage",
     "com.alephvault.unity.scenes": "file:../../unity-scenes",
     "com.alephvault.unity.soundaround": "file:../../unity-soundaround",
     "com.alephvault.unity.spriteutils": "file:/home/luismasuelli/Projects/Unity/unity-spriteutils",
@@ -23,6 +24,7 @@
     "com.gamemeanmachine.unity.windrose.biomes": "file:../../unity-windrose-biomes",
     "com.gamemeanmachine.unity.windrose.cubeworlds": "file:../../unity-windrose-cubeworlds",
     "com.gamemeanmachine.unity.windrose.neighbourteleports": "file:../../unity-windrose-neighbourteleports",
+    "com.gamemeanmachine.unity.windrose.spriteutils": "file:/home/luismasuelli/Projects/Unity/unity-windrose-spriteutils",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.7.1",
