Moving with the crypto package, slightly, and updating the base sample scene due to a change in WindRose

--- a/Assets/com.alephvault.unity.evmgames/Samples/AlephVault.Unity.EVMGames.Samples.asmdef
+++ b/Assets/com.alephvault.unity.evmgames/Samples/AlephVault.Unity.EVMGames.Samples.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "AlephVault.Unity.EVMGames.Samples",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:f3e508bb81e3448249582d03b9396c93"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
