--- a/Assets/com.gamemeanmachine.unity.refmapchars/Runtime/GameMeanMachine.Unity.RefMapChars.Runtime.asmdef
+++ b/Assets/com.gamemeanmachine.unity.refmapchars/Runtime/GameMeanMachine.Unity.RefMapChars.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:bb6eabf7788063212a196dda6018a5d0",
         "GUID:255de8069ce706544836a6062b00ac0d",
-        "GUID:eae3afb0047ccb6859e5272b570feadc"
+        "GUID:eae3afb0047ccb6859e5272b570feadc",
+        "GUID:439919d2a7071004695af55cbbe6745b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
