--- a/Assets/com.alephvault.unity.evmgames/Samples/AlephVault.Unity.EVMGames.Samples.asmdef
+++ b/Assets/com.alephvault.unity.evmgames/Samples/AlephVault.Unity.EVMGames.Samples.asmdef
@@ -2,7 +2,8 @@
     "name": "AlephVault.Unity.EVMGames.Samples",
     "rootNamespace": "",
     "references": [
-        "GUID:f3e508bb81e3448249582d03b9396c93"
+        "GUID:f3e508bb81e3448249582d03b9396c93",
+        "GUID:9fb1e86edc1bf4f46bfc867526bca155"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
