--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.alephvault.unity.binary": "file:../../unity-binary",
     "com.alephvault.unity.camjam": "file:../../unity-camjam",
     "com.alephvault.unity.evmgames": "file:/home/luismasuelli/Projects/Unity/unity-evmgames",
+    "com.alephvault.unity.evmgames.auth": "file:/home/luismasuelli/Projects/Unity/unity-evmgames-auth",
     "com.alephvault.unity.ipfs": "file:/home/luismasuelli/Projects/Unity/unity-ipfs",
     "com.alephvault.unity.layout": "file:../../unity-layout",
     "com.alephvault.unity.meetgard": "file:../../unity-meetgard",
