--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.alephvault.unity.camjam": "file:../../unity-camjam",
     "com.alephvault.unity.evmgames": "file:/home/luismasuelli/Projects/Unity/unity-evmgames",
     "com.alephvault.unity.evmgames.auth": "file:/home/luismasuelli/Projects/Unity/unity-evmgames-auth",
+    "com.alephvault.unity.evmgames.livecache": "file:/home/luismasuelli/Projects/Unity/unity-evmgames-livecache",
     "com.alephvault.unity.ipfs": "file:/home/luismasuelli/Projects/Unity/unity-ipfs",
     "com.alephvault.unity.layout": "file:../../unity-layout",
     "com.alephvault.unity.meetgard": "file:../../unity-meetgard",
