--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -27,11 +27,12 @@
     "com.gamemeanmachine.unity.windrose-gabtab": "file:../../unity-windrose-gabtab-plugin",
     "com.gamemeanmachine.unity.windrose.biomes": "file:../../unity-windrose-biomes",
     "com.gamemeanmachine.unity.windrose.cubeworlds": "file:../../unity-windrose-cubeworlds",
+    "com.gamemeanmachine.unity.windrose.lpcbiomes": "file:/home/luismasuelli/Projects/Unity/unity-windrose-lpcbiomes",
     "com.gamemeanmachine.unity.windrose.neighbourteleports": "file:../../unity-windrose-neighbourteleports",
     "com.gamemeanmachine.unity.windrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-windrose-refmapchars",
     "com.gamemeanmachine.unity.windrose.spriteutils": "file:/home/luismasuelli/Projects/Unity/unity-windrose-spriteutils",
-    "com.gamemeanmchine.unity.netrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-netrose-refmapchars",
-    "com.gamemeanmchine.unity.netrose.storage": "file:/home/luismasuelli/Projects/Unity/unity-netrose-storage",
+    "com.gamemeanmachine.unity.netrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-netrose-refmapchars",
+    "com.gamemeanmachine.unity.netrose.storage": "file:/home/luismasuelli/Projects/Unity/unity-netrose-storage",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.7.1",
