Updating the references to the new packages' locations

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "com.alephvault.unity.binary": "file:../../unity-binary",
     "com.alephvault.unity.boilerplates": "file:/home/luismasuelli/Projects/Unity/unity-boilerplates",
-    "com.alephvault.unity.camjam": "file:../../unity-camjam",
     "com.alephvault.unity.evmgames": "file:/home/luismasuelli/Projects/Unity/unity-evmgames",
     "com.alephvault.unity.evmgames.auth": "file:/home/luismasuelli/Projects/Unity/unity-evmgames-auth",
     "com.alephvault.unity.evmgames.livecache": "file:/home/luismasuelli/Projects/Unity/unity-evmgames-livecache",
@@ -19,20 +18,20 @@
     "com.alephvault.unity.support": "file:../../unity-support",
     "com.alephvault.unity.support.generic": "file:../../unity-support-generic",
     "com.alephvault.unity.textureutils": "file:/home/luismasuelli/Projects/Unity/unity-textureutils",
-    "com.gamemeanmachine.unity.backpack": "file:../../unity-backpack",
-    "com.gamemeanmachine.unity.gabtab": "file:../../unity-gabtab",
-    "com.gamemeanmachine.unity.netrose": "file:../../unity-netrose",
-    "com.gamemeanmachine.unity.windrose": "file:../../unity-windrose",
-    "com.gamemeanmachine.unity.windrose-backpack": "file:../../unity-windrose-backpack-plugin",
-    "com.gamemeanmachine.unity.windrose-gabtab": "file:../../unity-windrose-gabtab-plugin",
-    "com.gamemeanmachine.unity.windrose.biomes": "file:../../unity-windrose-biomes",
-    "com.gamemeanmachine.unity.windrose.cubeworlds": "file:../../unity-windrose-cubeworlds",
-    "com.gamemeanmachine.unity.windrose.lpcbiomes": "file:/home/luismasuelli/Projects/Unity/unity-windrose-lpcbiomes",
-    "com.gamemeanmachine.unity.windrose.neighbourteleports": "file:../../unity-windrose-neighbourteleports",
-    "com.gamemeanmachine.unity.windrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-windrose-refmapchars",
-    "com.gamemeanmachine.unity.windrose.spriteutils": "file:/home/luismasuelli/Projects/Unity/unity-windrose-spriteutils",
-    "com.gamemeanmachine.unity.netrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-netrose-refmapchars",
-    "com.gamemeanmachine.unity.netrose.storage": "file:/home/luismasuelli/Projects/Unity/unity-netrose-storage",
+    "com.alephvault.unity.backpack": "file:../../unity-backpack",
+    "com.alephvault.unity.gabtab": "file:../../unity-gabtab",
+    "com.alephvault.unity.netrose": "file:../../unity-netrose",
+    "com.alephvault.unity.windrose": "file:../../unity-windrose",
+    "com.alephvault.unity.windrose-backpack": "file:../../unity-windrose-backpack-plugin",
+    "com.alephvault.unity.windrose-gabtab": "file:../../unity-windrose-gabtab-plugin",
+    "com.alephvault.unity.windrose.biomes": "file:../../unity-windrose-biomes",
+    "com.alephvault.unity.windrose.cubeworlds": "file:../../unity-windrose-cubeworlds",
+    "com.alephvault.unity.windrose.lpcbiomes": "file:/home/luismasuelli/Projects/Unity/unity-windrose-lpcbiomes",
+    "com.alephvault.unity.windrose.neighbourteleports": "file:../../unity-windrose-neighbourteleports",
+    "com.alephvault.unity.windrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-windrose-refmapchars",
+    "com.alephvault.unity.windrose.spriteutils": "file:/home/luismasuelli/Projects/Unity/unity-windrose-spriteutils",
+    "com.alephvault.unity.netrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-netrose-refmapchars",
+    "com.alephvault.unity.netrose.storage": "file:/home/luismasuelli/Projects/Unity/unity-netrose-storage",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.7.1",
