Major update on re-import into 2021.3.x.

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,21 @@
 {
   "dependencies": {
+    "com.alephvault.unity.backpack": "file:../../unity-backpack",
     "com.alephvault.unity.binary": "file:../../unity-binary",
     "com.alephvault.unity.boilerplates": "file:/home/luismasuelli/Projects/Unity/unity-boilerplates",
     "com.alephvault.unity.evmgames": "file:/home/luismasuelli/Projects/Unity/unity-evmgames",
     "com.alephvault.unity.evmgames.auth": "file:/home/luismasuelli/Projects/Unity/unity-evmgames-auth",
     "com.alephvault.unity.evmgames.livecache": "file:/home/luismasuelli/Projects/Unity/unity-evmgames-livecache",
+    "com.alephvault.unity.gabtab": "file:../../unity-gabtab",
     "com.alephvault.unity.ipfs": "file:/home/luismasuelli/Projects/Unity/unity-ipfs",
     "com.alephvault.unity.layout": "file:../../unity-layout",
     "com.alephvault.unity.meetgard": "file:../../unity-meetgard",
     "com.alephvault.unity.meetgard.auth": "file:../../unity-meetgard-auth",
     "com.alephvault.unity.meetgard.scopes": "file:../../unity-meetgard-scopes",
     "com.alephvault.unity.menuactions": "file:../../unity-menu-actions",
+    "com.alephvault.unity.netrose": "file:../../unity-netrose",
+    "com.alephvault.unity.netrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-netrose-refmapchars",
+    "com.alephvault.unity.netrose.storage": "file:/home/luismasuelli/Projects/Unity/unity-netrose-storage",
     "com.alephvault.unity.remotestorage": "file:/home/luismasuelli/Projects/Unity/unity-remotestorage",
     "com.alephvault.unity.scenes": "file:../../unity-scenes",
     "com.alephvault.unity.soundaround": "file:../../unity-soundaround",
@@ -18,9 +23,6 @@
     "com.alephvault.unity.support": "file:../../unity-support",
     "com.alephvault.unity.support.generic": "file:../../unity-support-generic",
     "com.alephvault.unity.textureutils": "file:/home/luismasuelli/Projects/Unity/unity-textureutils",
-    "com.alephvault.unity.backpack": "file:../../unity-backpack",
-    "com.alephvault.unity.gabtab": "file:../../unity-gabtab",
-    "com.alephvault.unity.netrose": "file:../../unity-netrose",
     "com.alephvault.unity.windrose": "file:../../unity-windrose",
     "com.alephvault.unity.windrose-backpack": "file:../../unity-windrose-backpack-plugin",
     "com.alephvault.unity.windrose-gabtab": "file:../../unity-windrose-gabtab-plugin",
@@ -30,24 +32,22 @@
     "com.alephvault.unity.windrose.neighbourteleports": "file:../../unity-windrose-neighbourteleports",
     "com.alephvault.unity.windrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-windrose-refmapchars",
     "com.alephvault.unity.windrose.spriteutils": "file:/home/luismasuelli/Projects/Unity/unity-windrose-spriteutils",
-    "com.alephvault.unity.netrose.refmapchars": "file:/home/luismasuelli/Projects/Unity/unity-netrose-refmapchars",
-    "com.alephvault.unity.netrose.storage": "file:/home/luismasuelli/Projects/Unity/unity-netrose-storage",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "3.7.1",
-    "com.unity.analytics": "3.5.3",
-    "com.unity.collab-proxy": "1.5.7",
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.8",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.purchasing": "3.2.1",
-    "com.unity.test-framework": "1.1.24",
+    "com.unity.ads": "4.4.2",
+    "com.unity.analytics": "3.6.12",
+    "com.unity.collab-proxy": "2.0.4",
+    "com.unity.ide.rider": "3.0.21",
+    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.purchasing": "4.8.0",
+    "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
-    "com.unity.toolchain.linux-x86_64": "0.1.19-preview",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.21-preview",
+    "com.unity.timeline": "1.6.5",
+    "com.unity.toolchain.linux-x86_64": "2.0.4",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.4",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.1.7",
+    "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
